--- a/_sources/lectures/nlp_deep/tokenization/sentencepiece.ipynb
+++ b/_sources/lectures/nlp_deep/tokenization/sentencepiece.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cfdc61fb",
    "metadata": {
@@ -12,10 +13,11 @@
    "source": [
     "# SentencePiece Tokenizer\n",
     "\n",
-    "![](../figs/deep_nlp/sentencepiece/entelecheia_alphabets.png)"
+    "![](figs/entelecheia_alphabets.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3dab83d6",
    "metadata": {
@@ -29,17 +31,18 @@
     "\n",
     "- SentencePiece is an unsupervised text tokenizer and detokenizer mainly for Neural Network-based text generation systems where the vocabulary size is predetermined prior to the neural model training.\n",
     "- SentencePiece implements **subword units** (e.g., **byte-pair-encoding (BPE)** [[Sennrich et al.](https://www.aclweb.org/anthology/P16-1162)]) and **unigram language model** [[Kudo.](https://arxiv.org/abs/1804.10959)])\n",
-    "with the extension of direct training from raw sentences.\n",
+    "  with the extension of direct training from raw sentences.\n",
     "- SentencePiece is a pure end-to-end system that does not depend on language-specific pre/postprocessing.\n",
-    "- SentencePiece is a general-purpose tokenizer that can be used for any language. \n",
+    "- SentencePiece is a general-purpose tokenizer that can be used for any language.\n",
     "\n",
     "To be surprised, SentencePiece is not a tokenizer itself, but a tool to train a tokenizer.\n",
     "\n",
     "- It is a method to select the best subword units from the corpus optimizing the tokenization process.\n",
-    "- It implements the Subword Regularization algorithm."
+    "- It implements the Subword Regularization algorithm.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d50659d5",
    "metadata": {
@@ -54,12 +57,12 @@
     "- **Purely data driven**: SentencePiece trains tokenization and detokenization\n",
     "  models from sentences. Pre-tokenization ([Moses tokenizer](https://github.com/moses-smt/mosesdecoder/blob/master/scripts/tokenizer/tokenizer.perl)/[MeCab](http://taku910.github.io/mecab/)/[KyTea](http://www.phontron.com/kytea/)) is not always required.\n",
     "- **Language independent**: SentencePiece treats the sentences just as sequences of Unicode characters. There is no language-dependent logic.\n",
-    "- **Multiple subword algorithms**: **BPE**  [[Sennrich et al.](https://www.aclweb.org/anthology/P16-1162)] and **unigram language model** [[Kudo.](https://arxiv.org/abs/1804.10959)] are supported.\n",
+    "- **Multiple subword algorithms**: **BPE** [[Sennrich et al.](https://www.aclweb.org/anthology/P16-1162)] and **unigram language model** [[Kudo.](https://arxiv.org/abs/1804.10959)] are supported.\n",
     "- **Subword regularization**: SentencePiece implements subword sampling for [subword regularization](https://arxiv.org/abs/1804.10959) and [BPE-dropout](https://arxiv.org/abs/1910.13267) which help to improve the robustness and accuracy of NMT models.\n",
     "- **Fast and lightweight**: Segmentation speed is around 50k sentences/sec, and memory footprint is around 6MB.\n",
     "- **Self-contained**: The same tokenization/detokenization is obtained as long as the same model file is used.\n",
     "- **Direct vocabulary id generation**: SentencePiece manages vocabulary to id mapping and can directly generate vocabulary id sequences from raw sentences.\n",
-    "- **NFKC-based normalization**: SentencePiece performs NFKC-based text normalization."
+    "- **NFKC-based normalization**: SentencePiece performs NFKC-based text normalization.\n"
    ]
   },
   {
@@ -89,6 +92,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8d3e862e",
    "metadata": {
@@ -102,7 +106,7 @@
     "\n",
     "### The number of unique tokens is predetermined\n",
     "\n",
-    "- Neural Machine Translation models typically operate with a fixed vocabulary. \n",
+    "- Neural Machine Translation models typically operate with a fixed vocabulary.\n",
     "- Unlike most unsupervised word segmentation algorithms, which assume an infinite vocabulary, SentencePiece trains the segmentation model such that the final vocabulary size is fixed, e.g., 8k, 16k, or 32k.\n",
     "\n",
     "Note that SentencePiece specifies the final vocabulary size for training, which is different from\n",
@@ -111,6 +115,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6ebe3edb",
    "metadata": {
@@ -122,13 +127,14 @@
    "source": [
     "### Trains from raw sentences\n",
     "\n",
-    "- Previous sub-word implementations assume that the input sentences are pre-tokenized. \n",
+    "- Previous sub-word implementations assume that the input sentences are pre-tokenized.\n",
     "- This constraint was required for efficient training, but makes the preprocessing complicated as we have to run language dependent tokenizers in advance.\n",
-    "- The implementation of SentencePiece is fast enough to train the model from raw sentences. \n",
+    "- The implementation of SentencePiece is fast enough to train the model from raw sentences.\n",
     "- This is useful for training the tokenizer and detokenizer for Chinese and Japanese where no explicit spaces exist between words.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "806d52ef",
    "metadata": {
@@ -140,18 +146,19 @@
    "source": [
     "### Whitespace is treated as a basic symbol\n",
     "\n",
-    "- The first step of Natural Language processing is text tokenization. \n",
+    "- The first step of Natural Language processing is text tokenization.\n",
     "- For example, a standard English tokenizer would segment the text \"Hello world.\" into the following three tokens.\n",
     "\n",
     "  > [Hello] [World] [.]\n",
     "\n",
-    "- One observation is that the original input and tokenized sequence are **NOT reversibly convertible**. \n",
+    "- One observation is that the original input and tokenized sequence are **NOT reversibly convertible**.\n",
     "- For instance, the information that is no space between “World” and “.” is dropped from the tokenized sequence, since e.g., `Tokenize(“World.”) == Tokenize(“World .”)`\n",
     "\n",
-    "- SentencePiece treats the input text just as a sequence of Unicode characters. Whitespace is also handled as a normal symbol. \n"
+    "- SentencePiece treats the input text just as a sequence of Unicode characters. Whitespace is also handled as a normal symbol.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1d4a53dc",
    "metadata": {
@@ -168,17 +175,18 @@
     "- Then, this text is segmented into small pieces, for example:\n",
     "\n",
     "  > [Hello] [▁Wor] [ld] [.]\n",
-    "  \n",
+    "\n",
     "- Since the whitespace is preserved in the segmented text, we can detokenize the text without any ambiguities.\n",
     "\n",
     "```\n",
     "  detokenized = ''.join(pieces).replace('▁', ' ')\n",
     "```\n",
     "\n",
-    "- This feature makes it possible to perform detokenization without relying on language-specific resources."
+    "- This feature makes it possible to perform detokenization without relying on language-specific resources.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "736f378c-f2cd-47c0-83ea-3c001992fd61",
    "metadata": {
@@ -190,11 +198,12 @@
    "source": [
     "Note that we cannot apply the same lossless conversions when splitting the sentence with standard word segmenters, since they treat the whitespace as a special symbol. Tokenized sequences do not preserve the necessary information to restore the original sentence.\n",
     "\n",
-    "* (en) Hello world.   → [Hello] [World] [.]   \\(A space between Hello and World\\)\n",
-    "* (ja) こんにちは世界。  → [こんにちは] [世界] [。] \\(No space between こんにちは and 世界\\)\n"
+    "- (en) Hello world. → [Hello] [World] [.] \\(A space between Hello and World\\)\n",
+    "- (ja) こんにちは世界。 → [こんにちは] [世界] [。] \\(No space between こんにちは and 世界\\)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "90f220d0",
    "metadata": {
@@ -208,8 +217,8 @@
     "\n",
     "- Subword regularization [[Kudo.](https://arxiv.org/abs/1804.10959)] and BPE-dropout [Provilkov et al](https://arxiv.org/abs/1910.13267) are simple regularization methods that virtually augment training data with on-the-fly subword sampling, which helps to improve the accuracy as well as robustness of NMT models.\n",
     "\n",
-    "- To enable subword regularization, you would like to integrate SentencePiece library (C++/Python) into the NMT system to sample one segmentation for each parameter update, which is different from the standard off-line data preparations. \n",
-    "- You can find that 'New York' is segmented differently on each ``SampleEncode (C++)`` or ``encode with enable_sampling=True (Python)`` calls. \n"
+    "- To enable subword regularization, you would like to integrate SentencePiece library (C++/Python) into the NMT system to sample one segmentation for each parameter update, which is different from the standard off-line data preparations.\n",
+    "- You can find that 'New York' is segmented differently on each `SampleEncode (C++)` or `encode with enable_sampling=True (Python)` calls.\n"
    ]
   },
   {
@@ -367,6 +376,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fd9ab689",
    "metadata": {
@@ -390,11 +400,11 @@
     "  P(Y|X;\\theta) = \\prod_{i=1}^n P(y_i | \\mathbf{x}, y_{<i}; \\theta)\n",
     "  $$\n",
     "\n",
-    "  where the lower case variables represent the actual tokens, and the upper case variables represent the sequence of tokens. $\\theta$ is the model parameter.\n",
-    "\n"
+    "  where the lower case variables represent the actual tokens, and the upper case variables represent the sequence of tokens. $\\theta$ is the model parameter.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "91775cdd",
    "metadata": {
@@ -412,12 +422,13 @@
     "  $$\n",
     "  \\mathcal{L}(\\theta) = - \\sum_{s=1}^{|D|} \\mathbb{E}_{\\substack{\\mathbf{x} \\sim P(\\mathbf{x}|X^{(s)}) \\\\ \\mathbf{y} \\sim P(\\mathbf{y}|Y^{(s)})}} \\log P(\\mathbf{y}|\\mathbf{x};\\theta)\n",
     "  $$\n",
-    "  \n",
+    "\n",
     "- This formula looks intimidating, but it is actually quite simple.\n",
-    "- In practice, we can approximate the expected log-likelihood of a single training example $(\\mathbf{x}, \\mathbf{y})$."
+    "- In practice, we can approximate the expected log-likelihood of a single training example $(\\mathbf{x}, \\mathbf{y})$.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f2c4ac1b",
    "metadata": {
@@ -434,10 +445,11 @@
     "- The actual tokenization $X$ is not observed, we only observe the un-tokenized sequence $X$.\n",
     "- This is a classic problem of maximum likelihood estimation, and we can solve it by the EM algorithm.\n",
     "- The problem is that thte $x_i$ are all of different lengths, and we cannot apply the EM algorithm directly.\n",
-    "- Instead, we should use a Bayesian approach to solve this problem."
+    "- Instead, we should use a Bayesian approach to solve this problem.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7005fe57",
    "metadata": {
@@ -453,10 +465,11 @@
     "\\mathcal{L}(\\theta) = - \\sum_{s=1}^{|D|} \\log P(X^{(s)}) = - \\sum_{s=1}^{|D|} \\log (\\sum_{\\mathbf{x} \\in S(\\mathbf{x})} P(\\mathbf{x}) )\n",
     "$$\n",
     "\n",
-    "where the $\\mathbf{x}$ is a unigram sequence, and $S(\\mathbf{x})$ is the set of all possible sequences that can be generated from $\\mathbf{x}$."
+    "where the $\\mathbf{x}$ is a unigram sequence, and $S(\\mathbf{x})$ is the set of all possible sequences that can be generated from $\\mathbf{x}$.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ad63ab68",
    "metadata": {
@@ -469,7 +482,7 @@
     "The steps are as follows:\n",
     "\n",
     "1. Initialize the unigram probabilities $p(x_i)$. The frequency of each unigram is used as the initial value.\n",
-    "2. M-step: Compute the most likely sequence $\\mathbf{x}$ given the current unigram probabilities $p(x_i)$. \n",
+    "2. M-step: Compute the most likely sequence $\\mathbf{x}$ given the current unigram probabilities $p(x_i)$.\n",
     "3. E-step: Given the current most likely sequence $\\mathbf{x}$, update the unigram probabilities $p(x_i)$. In Bayesian setting, the unigram probabilities are defined as:\n",
     "\n",
     "   $$\n",
@@ -477,7 +490,8 @@
     "   $$\n",
     "\n",
     "   where $c_i$ is the frequency of the unigram $x_i$ in the corpus, $|V|$ is the size of the vocabulary, and $\\psi(c_i)$ is the digamma function.\n",
-    "4. Repeat the M-step and E-step until the unigram probabilities converge. The log-likelihood is monotonically increasing, so we can stop the training when the log-likelihood does not increase for a certain number of iterations."
+    "\n",
+    "4. Repeat the M-step and E-step until the unigram probabilities converge. The log-likelihood is monotonically increasing, so we can stop the training when the log-likelihood does not increase for a certain number of iterations.\n"
    ]
   },
   {
@@ -499,6 +513,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d287b2ac",
    "metadata": {
@@ -508,7 +523,7 @@
     "tags": []
    },
    "source": [
-    "- Initialize the unigram probabilities $p(x_i)$. The frequency of each unigram is used as the initial value."
+    "- Initialize the unigram probabilities $p(x_i)$. The frequency of each unigram is used as the initial value.\n"
    ]
   },
   {
@@ -539,6 +554,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "75582211",
    "metadata": {
@@ -548,7 +564,7 @@
     "tags": []
    },
    "source": [
-    "- M-step: Compute the most likely sequence $\\mathbf{x}$ given the current unigram probabilities $p(x_i)$. \n"
+    "- M-step: Compute the most likely sequence $\\mathbf{x}$ given the current unigram probabilities $p(x_i)$.\n"
    ]
   },
   {
@@ -574,6 +590,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bb46c7f4",
    "metadata": {
@@ -583,7 +600,7 @@
     "tags": []
    },
    "source": [
-    "- E-step: Given the current most likely sequence $\\mathbf{x}$, update the unigram probabilities $p(x_i)$."
+    "- E-step: Given the current most likely sequence $\\mathbf{x}$, update the unigram probabilities $p(x_i)$.\n"
    ]
   },
   {
@@ -618,6 +635,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3b525684",
    "metadata": {
@@ -627,7 +645,7 @@
     "tags": []
    },
    "source": [
-    "- Repeat the M-step and E-step until the unigram probabilities converge."
+    "- Repeat the M-step and E-step until the unigram probabilities converge.\n"
    ]
   },
   {
@@ -676,6 +694,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "599ab185",
    "metadata": {
@@ -688,12 +707,14 @@
     "- Consider tokenizing the word `hello` given the subwords {`he`, `h`, `ll`, `e`, `o`, `hell`}.\n",
     "- We can generate the following figure:\n",
     "\n",
-    "  ![](../figs/deep_nlp/sentencepiece/transition.png)\n",
+    "  ![](figs/transition.png)\n",
     "\n",
     "  - Each arrow represents a transition, and the weight of the arrow is the probability of the transition.\n",
     "  - The goal is to pick arrows that we arrive at `<eos>` (end of sequence) with the highest probability.\n",
+    "\n",
     "- This problem has optimal substructure, so we can apply dynamic programming to solve it.\n",
     "- For example, assume that we are at the state (4).\n",
+    "\n",
     "  - There are three arrows that can lead to the state (4), a red, a blue, and a green arrow.\n",
     "  - The highest probability at the state (4) is just the best path from the previous state, plus the probability of the transition.\n",
     "\n",
@@ -703,6 +724,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8ce3d585",
    "metadata": {
@@ -713,16 +735,17 @@
    },
    "source": [
     "- The Trie structure is used to find the optimal segmentation.\n",
+    "\n",
     "  - The Trie structure is a tree structure that is used to store a set of strings.\n",
     "  - The following figure shows the Trie structure for the subwords {`h`, `he`, `hell`, `hello`}:\n",
     "\n",
-    "    ![](../figs/deep_nlp/sentencepiece/trie.png)\n",
+    "    ![](figs/trie.png)\n",
     "\n",
     "  - The root node is the start of the sequence, `<sos>`.\n",
     "  - Any time we encounter an `end` node, it means that everything in the path from `<sos>` to `end` is a valid subword.\n",
     "  - The root node `<sos>` will begin with exactly one branch for every unique first character in the vocabulary.\n",
     "  - As we grow the available subwords, we create more branches.\n",
-    "  - The Trie is going to be the fundamental data structure that the tokenizer uses to store and retrieve the subwords."
+    "  - The Trie is going to be the fundamental data structure that the tokenizer uses to store and retrieve the subwords.\n"
    ]
   },
   {
@@ -760,6 +783,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6011d611",
    "metadata": {
@@ -773,7 +797,7 @@
     "\n",
     "- One of the algorithm for finding the optimal sequence from the Trie is a forwards-backwards algorithm.\n",
     "  - It is a special subset of the sum-product algorithm for training directed graphical models.\n",
-    "  - More sophisticated algorithms include the Forward-DP Backward-A* algorithm, and the Forward-Filtering and Backward-Sampling algorithm (FFBS).\n",
+    "  - More sophisticated algorithms include the Forward-DP Backward-A\\* algorithm, and the Forward-Filtering and Backward-Sampling algorithm (FFBS).\n",
     "- When we compute the forward step, we also store the length of the longest subword that ends at the current position.\n",
     "- This allows us to backtrack from the end of the sequence to the beginning, and find the optimal segmentation, since the length of the arrow is the length of the subword.\n",
     "- The EM step puts together the E step and the M step, where the E step is updating the Trie, and the M step is finding the optimal segmentation using the forwards-backwards algorithm explained above.\n",
@@ -876,6 +900,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "30673c24",
    "metadata": {
@@ -888,10 +913,11 @@
     "### Subword sampling\n",
     "\n",
     "- To find alternative segmentations, we can save the n-best paths in the forward-backward step.\n",
-    "- Now, we can sample from the n-best paths to find alternative segmentations."
+    "- Now, we can sample from the n-best paths to find alternative segmentations.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "904cf20e",
    "metadata": {
@@ -901,7 +927,7 @@
     "tags": []
    },
    "source": [
-    "## Implementation"
+    "## Implementation\n"
    ]
   },
   {
@@ -1054,6 +1080,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "66d50cc3",
    "metadata": {
@@ -1066,7 +1093,7 @@
     "## References\n",
     "\n",
     "- [SentencePiece](https://github.com/google/sentencepiece)\n",
-    "- [SentencePiece Tokenizer Demystified](https://towardsdatascience.com/sentencepiece-tokenizer-demystified-d0a3aac19b15)"
+    "- [SentencePiece Tokenizer Demystified](https://towardsdatascience.com/sentencepiece-tokenizer-demystified-d0a3aac19b15)\n"
    ]
   }
  ],
