chore(notebook): format markdown and remove redundant content

--- a/book/lectures/nlp_intro/index.ipynb
+++ b/book/lectures/nlp_intro/index.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "76b40700",
    "metadata": {
@@ -10,7 +11,7 @@
     "tags": []
    },
    "source": [
-    "# Introduction to NLP"
+    "# Introduction to NLP\n"
    ]
   },
   {
@@ -52,6 +53,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3ac47c37",
    "metadata": {
@@ -65,7 +67,6 @@
     "\n",
     "- Jurafsky, D., & Martin, J. H. (2019). Speech and language processing: An introduction to natural language processing, computational linguistics, and speech recognition (3rd ed.). Upper Saddle River, NJ: Pearson Education.\n",
     "- [https://web.stanford.edu/~jurafsky/slp3/](https://web.stanford.edu/~jurafsky/slp3/)\n",
-    "\n",
     "\n",
     "### Reference Books\n",
     "\n",
@@ -93,6 +94,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "156df085",
    "metadata": {
@@ -104,26 +106,8 @@
    "source": [
     "## 🧠 Term Project\n",
     "\n",
-    "- For the term project, students will choose a real-world data set and build a natural language processing system that can perform some task on the data set. \n",
+    "- For the term project, students will choose a real-world data set and build a natural language processing system that can perform some task on the data set.\n",
     "- The project will be presented in the form of a poster at the end of the semester.\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "ddf1c678",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "## 📒 Lecture Notes\n",
-    "\n",
-    "You can find the lecture notes of the course by clicking on the following link:\n",
-    "\n",
-    "https://lecture.entelecheia.ai/lectures/nlp_intro"
    ]
   },
   {
@@ -147,7 +131,7 @@
     "\n",
     "This approach has several advantages. It makes NLP more accessible and understandable to students, and it allows them to immediately start using NLP to solve their own problems. Furthermore, it helps students learn the whole game of NLP, not just individual concepts or techniques. By covering both the theory and practice of NLP, students will be well-prepared for further study or practical applications in the field.\n",
     "\n",
-    "> Harvard Professor David Perkins's book, [Making Learning Whole](https://www.amazon.com/Making-Learning-Whole-Principles-Transform/dp/0470633719), popularized the idea of \"teaching the whole game.\" \n"
+    "> Harvard Professor David Perkins's book, [Making Learning Whole](https://www.amazon.com/Making-Learning-Whole-Principles-Transform/dp/0470633719), popularized the idea of \"teaching the whole game.\"\n"
    ]
   },
   {
