chore: update fig paths

--- a/book/lectures/nlp_deep/intro.ipynb
+++ b/book/lectures/nlp_deep/intro.ipynb
@@ -326,11 +326,11 @@
     "tags": []
    },
    "source": [
-    "```{image} ../figs/intro_nlp/intro/nlp_1_1_mt_google.png\n",
+    "```{image} figs/nlp_1_1_mt_google.png\n",
     ":width: 700px\n",
     ":align: center\n",
     "```\n",
-    "```{image} ../figs/intro_nlp/intro/nlp_1_1_mt_papago.png\n",
+    "```{image} figs/nlp_1_1_mt_papago.png\n",
     ":width: 700px\n",
     ":align: center\n",
     "```"
@@ -345,8 +345,8 @@
     ]
    },
    "source": [
-    "<center><img src=\"../figs/intro_nlp/intro/nlp_1_1_mt_google.png\" width=\"900px\"></center>\n",
-    "<center><img src=\"../figs/intro_nlp/intro/nlp_1_1_mt_papago.png\" width=\"900px\"></center>"
+    "<center><img src=\"figs/nlp_1_1_mt_google.png\" width=\"900px\"></center>\n",
+    "<center><img src=\"figs/nlp_1_1_mt_papago.png\" width=\"900px\"></center>"
    ]
   },
   {
@@ -419,7 +419,7 @@
    "source": [
     "[Replika](https://my.replika.ai) is a #1 chatbot companion powered by artificial intelligence.\n",
     "\n",
-    "![replika](../figs/intro_nlp/intro/nlp_1_3_replika.png)\n"
+    "![replika](figs/nlp_1_3_replika.png)\n"
    ]
   },
   {
@@ -496,7 +496,7 @@
     "tags": []
    },
    "source": [
-    "```{image} ../figs/intro_nlp/intro/nlp_1_2_codex.gif\n",
+    "```{image} figs/nlp_1_2_codex.gif\n",
     ":width: 700px\n",
     ":align: center\n",
     "```"
@@ -511,7 +511,7 @@
     ]
    },
    "source": [
-    "<center><img src=\"../figs/intro_nlp/intro/nlp_1_2_codex.gif\" width=\"700px\"></center>\n"
+    "<center><img src=\"figs/nlp_1_2_codex.gif\" width=\"700px\"></center>\n"
    ]
   },
   {
@@ -558,7 +558,7 @@
     "tags": []
    },
    "source": [
-    "```{image} ../figs/intro_nlp/intro/nlp_1_4_disco.png\n",
+    "```{image} figs/nlp_1_4_disco.png\n",
     ":width: 700px\n",
     ":align: center\n",
     "```"
@@ -576,7 +576,7 @@
     ]
    },
    "source": [
-    "<center><img src=\"../figs/intro_nlp/intro/nlp_1_4_disco.png\" width=\"800px\"></center>\n"
+    "<center><img src=\"figs/nlp_1_4_disco.png\" width=\"800px\"></center>\n"
    ]
   },
   {
@@ -696,7 +696,7 @@
    "source": [
     "The sentence \"I saw her duck\" is ambiguous and has three possible meanings:\n",
     "\n",
-    "![Ambiguity](../figs/intro_nlp/intro/nlp_1_34.png)\n",
+    "![Ambiguity](figs/nlp_1_34.png)\n",
     "\n",
     "- The first meaning is that the speaker saw a duck that belongs to her. In this case, \"duck\" is a noun and \"her\" is possessive, indicating ownership.\n",
     "- The second meaning is that the speaker saw her physically duck, meaning that she crouched or moved out of the way. In this case, \"duck\" is a verb.\n",
@@ -774,7 +774,7 @@
     "The eKorpkit Corpus is a large, diverse, multilingual (ko/en) language modelling dataset.\n",
     "English: 258.83 GiB, Korean: 190.04 GiB, Total: 448.87 GiB\n",
     "\n",
-    "![corpus](../figs/intro_nlp/intro/nlp_1_12.png)\n"
+    "![corpus](figs/nlp_1_12.png)\n"
    ]
   },
   {
@@ -821,7 +821,7 @@
     "\n",
     "The difference in meaning between the two sentences illustrates how unmodeled variables can influence the interpretation of text. In this case, the presence or absence of the word \"floor\" or \"hammer\" has a significant impact on the reader's understanding of what caused the glass to break.\n",
     "\n",
-    "![knowledge](../figs/intro_nlp/intro/nlp_1_20.png)"
+    "![knowledge](figs/nlp_1_20.png)"
    ]
   },
   {
@@ -998,7 +998,7 @@
     "\n",
     "With respect to the SQuAD dataset, human performance is quite high, with a F1 score of around 92% on the test set.\n",
     "\n",
-    "![squad](../figs/intro_nlp/intro/nlp_1_24.png)"
+    "![squad](figs/nlp_1_24.png)"
    ]
   },
   {
